# obsidian-clipper

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.minimal  README.md  clipper_blog.md  clipper_conv.md  docker-compose.minimal.yml  docker-compose.yml  install.sh  lcaude_conv030526.md  obsidian-clipper  obsidian-clipper-wrapper  obsidian-clipper.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: manual.md
obsidian_clipper/: __init__.py  __main__.py  _version.py  clipper.py  config.py  exceptions.py
obsidian_clipper/capture/: __init__.py  citation.py  screenshot.py  text.py
obsidian_clipper/cli/: __init__.py  args.py  main.py  tui.py
obsidian_clipper/obsidian/: __init__.py  api.py
obsidian_clipper/utils/: __init__.py  command.py  logging.py  notification.py  retry.py
obsidian_clipper/workflow/: __init__.py  capture.py  session.py
tests/: __init__.py  test_api.py  test_capture.py  test_clipper.py  test_config.py  test_exceptions.py  test_logging.py  test_new_features.py  test_screenshot.py  test_session.py  test_text.py  test_tui.py  test_utils.py
tests/integration/: test_api_integration.py  test_workflow.py
